syntax = "proto3";
package stafihub.stafihub.rvalidator;

import "gogoproto/gogo.proto";
import "rvalidator/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/stafihub/stafihub/x/rvalidator/types";

// GenesisState defines the rvalidator module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated RValidator selectedRValidatorList = 2;
  repeated Cycle latestVotedCycleList = 3;
  repeated Cycle latestDealedCycleList = 4;
  repeated CycleSeconds cycleSecondsList = 5;
  repeated ShuffleSeconds shuffleSecondsList = 6;
  repeated DealingRValidator dealingRValidatorList = 7;
  // this line is used by starport scaffolding # genesis/proto/state
}


message RValidator {
  string denom  = 1;
  string poolAddress = 2;
  string valAddress = 3;
}

message DealingRValidator {
  string denom  = 1;
  string poolAddress = 2;
  string oldValAddress = 3;
  string newValAddress = 4;
}



message Cycle {
  string denom = 1;
  string poolAddress = 2;
  uint64 version = 3;
  uint64 number = 4;
}

message CycleSeconds {
  string denom = 1;
  uint64 version = 2;
  uint64 seconds = 3;
}

message ShuffleSeconds {
  string denom = 1;
  uint64 version = 2;
  uint64 seconds = 3;
}